<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/viewProductDetail"

    android:background="@color/colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activites.Other.DetailProductActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/size_border_all"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imgProductDetailMain"
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/lap3" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10sp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:singleLine="false"
                        android:id="@+id/tvProductDetailName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="Laptop ASUS"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical"></LinearLayout>

                    <ImageView
                        android:id="@+id/imgProductDetailTym"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6sp"
                        android:layout_weight="5"
                        app:srcCompat="@drawable/ic_favorite_border"
                        app:tint="@color/colorPrice" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvProductDetailPrice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Giá: 16.000đ"
                        android:textColor="#F81A1A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvProductDetailSold"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10sp"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:text="Đã bán: 132"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tvABC"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:gravity="center_vertical"
                android:text="Mô tả"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProductDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:text="@string/description"
                android:textSize="18sp" />


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10sp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="15sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="Đánh giá sản phẩm"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:orientation="horizontal">

                            <RatingBar
                                android:id="@+id/ratingBar"

                                android:transformPivotY="30dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:max="5"
                                android:numStars="3"
                                android:rating="3"
                                android:scaleX=".5"
                                android:scaleY=".5"
                                android:stepSize="0.5" />

                            <TextView
                                android:id="@+id/textView39"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5sp"
                                android:layout_weight="3"
                                android:gravity="center_vertical"
                                android:text="(125 đánh giá)"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView38"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="right|center_vertical"
                        android:text="Xem tất cả >"
                        android:textColor="#ED5555"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>



            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10sp"
                android:background="?android:attr/listDivider" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            app:srcCompat="@drawable/ic_account" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center_vertical"
                                android:text="Thanh Tuyền" />

                            <RatingBar

                                android:layout_width="192dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:max="5"
                                android:numStars="3"
                                android:rating="5"
                                android:scaleX=".5"
                                android:scaleY=".5"
                                android:stepSize="0.5"
                                android:transformPivotY="10dp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="8"
                            android:orientation="horizontal"></LinearLayout>

                        <TextView
                            android:id="@+id/textView41"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/commen1"
                            android:textColor="#272323"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            app:srcCompat="@drawable/ic_account" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView40"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center_vertical"
                                android:text="Đức Danh" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:orientation="horizontal">

                                <RatingBar
                                    android:id="@+id/ratingBar3"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="3"
                                    android:max="5"
                                    android:numStars="3"
                                    android:rating="5"
                                    android:scaleX=".5"
                                    android:scaleY=".5"
                                    android:stepSize="0.5"
                                    android:transformPivotY="10dp" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:orientation="vertical"></LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="8"
                            android:orientation="horizontal"></LinearLayout>

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/commen2"
                            android:textColor="#272323"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:gravity="center_vertical"
                android:text="Gợi ý liên quan"
                android:textSize="18sp"
                android:textStyle="bold" />

           <androidx.recyclerview.widget.RecyclerView
               android:layout_width="match_parent"
               android:layout_height="1500dp"
               android:id="@+id/rcvProductDetail"
               />



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:background="#000000">

        <ImageView
           android:id="@+id/imgProductDetailCall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="2sp"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_phone" />

        <ImageView
           android:id="@+id/imgProductDetailCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="2sp"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_cart_add" />

        <TextView
           android:id="@+id/tvProductDetailShopNow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#EA4C4C"
            android:gravity="center"
            android:text="Mua ngay"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>
